fix: Resolve an issue where tooltips could cause the page to overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,6 +136,7 @@ h6 {
   display: flex;
   height: 100%;
   justify-content: center;
+  overflow: hidden;
 }
 
 .dashboard {
@@ -276,7 +277,7 @@ h6 {
 .legend-color {
   width: 1rem;
   height: 1rem;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
 
 .legend-color--high {
